--- a/authors.html
+++ b/authors.html
@@ -225,7 +225,7 @@
         
         <div class="team-grid">
             <div class="team-member">
-                <img src="JoshuaCrawford.jpg" alt="Joshua Crawford" class="headshot">
+                <img src="cDay/JoshuaCrawford.jpg" alt="Joshua Crawford" class="headshot">
                 <div class="member-info">
                     <a href="https://www.linkedin.com/in/crawford-joshua" class="member-name" target="_blank">Joshua Crawford</a>
                     <div class="member-title">Team Lead and AI Development</div>
