--- a/authors.html
+++ b/authors.html
@@ -225,7 +225,7 @@
         
         <div class="team-grid">
             <div class="team-member">
-                <img src="JoshuaCrawford.jpg" alt="Joshua Crawford" class="headshot">
+                <img src="joshuaCrawford.jpg" alt="Joshua Crawford" class="headshot">
                 <div class="member-info">
                     <a href="https://www.linkedin.com/in/crawford-joshua" class="member-name" target="_blank">Joshua Crawford</a>
                     <div class="member-title">Team Lead and AI Development</div>
@@ -261,7 +261,7 @@
             </div>
             
             <div class="team-member">
-                <img src="DariaMorhun.jpg" alt="Daria Morhun" class="headshot">
+                <img src=dariaMorhun.jpg" alt="Daria Morhun" class="headshot">
                 <div class="member-info">
                     <a href="https://www.linkedin.com/in/daria-morhun-08385919a" class="member-name" target="_blank">Daria Morhun</a>
                     <div class="member-title">AI Development and Organization</div>
