--- a/authors.html
+++ b/authors.html
@@ -261,7 +261,7 @@
             </div>
             
             <div class="team-member">
-                <img src=dariaMorhun.jpg" alt="Daria Morhun" class="headshot">
+                <img src="dariaMorhun.jpg" alt="Daria Morhun" class="headshot">
                 <div class="member-info">
                     <a href="https://www.linkedin.com/in/daria-morhun-08385919a" class="member-name" target="_blank">Daria Morhun</a>
                     <div class="member-title">AI Development and Organization</div>
