--- a/callNow.html
+++ b/callNow.html
@@ -222,7 +222,7 @@
             const phoneError = document.getElementById('phoneError');
             const callButton = document.getElementById('callButton');
             const statusMessage = document.getElementById('statusMessage');
-            const RETELL_API_KEY = 'PLACEHOLDER';
+            const RETELL_API_KEY = 'key_0132fff46bdae935711801774617';
 
             // Add a better phone validation
             phoneNumberInput.addEventListener('input', validatePhoneNumber);
