--- a/listen.html
+++ b/listen.html
@@ -186,7 +186,7 @@
             const playButton = document.getElementById('playButton');
             const statusMessage = document.getElementById('statusMessage');
             const audioPlayer = document.getElementById('audioPlayer');
-            const RETELL_API_KEY = 'PLACEHOLDER';
+            const RETELL_API_KEY = 'key_0132fff46bdae935711801774617';
 
             playButton.addEventListener('click', async function() {
                 try {
