--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
             }
         }
     </style>
+    <script src="js/env-loader.js"></script>
+    <script src="js/config.js"></script>
 </head>
 <body>
     <div class="nav-bar">
